@@ -495,6 +495,7 @@ class Populator(BasePopulator):
                 build_cell(Organisation, 'naf'),
                 build_cell(Organisation, 'siret'),
                 build_cell(Organisation, 'rcs'),
+                build_cell(Organisation, 'eori'),
                 build_cell(Organisation, 'tvaintra'),
                 build_cell(Organisation, 'subject_to_vat'),
                 build_cell(Organisation, 'annual_revenue'),
@@ -532,6 +533,7 @@ class Populator(BasePopulator):
                 build_cell(Organisation, 'naf'),
                 build_cell(Organisation, 'siret'),
                 build_cell(Organisation, 'rcs'),
+                build_cell(Organisation, 'eori'),
                 build_cell(Organisation, 'tvaintra'),
                 build_cell(Organisation, 'subject_to_vat'),
                 build_cell(Organisation, 'annual_revenue'),
